[tool.poetry]
name = "oanda"
version = "0.1.0"
description = ""
authors = ["Gustavo <gustavo.zarruk@cognite.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ujson = "^5.6.0"
v20 = "^3.0.25.0"
pyyaml = "^6.0"
tpqoa = {git = "https://github.com/yhilpisch/tpqoa.git"}
pandas = "^1.5.2"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
